# XylarJava

./: .gitattributes  .gitignore  CMakeLists.txt  ContentModels.cs  ContentParsers.cs  ContentService.cs  LiquidGlassEffects.cs  MainWindow.axaml  MainWindow.axaml.cs  MicrosoftAuth.cs  ModrinthAPI.cs  OfflineWelcomeSequencePlayer.cs  Program.cs  README.md  WelcomePage.html  WelcomeWindow.axaml  WelcomeWindow.axaml.cs  XylarJavaLauncher.csproj  app.manifest  auth-settings.ini.example  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: backport.yml  clang-tidy.yml  container.yml  linux-appimage.yml  release.yml  simple-build.yml  update-flake.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: GetGitRevisionDescription.cmake.in
community_themes/Borest/: preview.png.license
community_themes/Deep-Dark/: preview.png.license
community_themes/Hi30-Pink/: theme.json.license
community_themes/Nord/: README.md  theme.json.license
flatpak/: README.md  XylarJava  io.xylarjava.XylarJava.yml
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  AssertHelpers.h  BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  Commandline.cpp  Commandline.h  DataMigrationTask.cpp  DataMigrationTask.h  DesktopServices.cpp  EmbeddedSecrets.cpp  EmbeddedSecrets.h  Exception.h  ExponentialSeries.h  FastFileIconProvider.cpp  FastFileIconProvider.h  FileIgnoreProxy.cpp  FileIgnoreProxy.h  FileSystem.cpp  FileSystem.h  GZip.cpp  HardwareInfo.cpp  HardwareInfo.h  InstanceCopyPrefs.cpp  InstanceCopyPrefs.h  InstanceDirUpdate.cpp  InstanceDirUpdate.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  JavaCommon.cpp  Json.cpp  (+28 more)
program_info/: CMakeLists.txt  XylarJava.6.scd.in  io.xylarjava.XylarJava.desktop.in  io.xylarjava.XylarJava.metainfo.xml.in
python-tools/: asset_mirror.py  modpack_builder.py  version_indexer.py
scripts/: build-linux-appimage.sh  build-windows-single-exe.ps1  deploy-windows.sh  package-windows.ps1
tests/: CMakeLists.txt  DataPackParse_test.cpp  Library_test.cpp  MetaComponentParse_test.cpp  Packwiz_test.cpp  README.md  ResourceFolderModel_test.cpp  ResourcePackParse_test.cpp  ShaderPackParse_test.cpp  TexturePackParse_test.cpp  Version_test.cpp  WorldSaveParse_test.cpp  XmlLogs_test.cpp
(+674 files in other folders)
